# otclient

./: .gitattributes  .gitignore  BUILD.md  BUILD_INFO.md  BUILD_INSTRUCTIONS.md  BUILD_WINDOWS.md  CMakeLists.txt  CMakePresets.json  README_PROJETO74.md  fix_and_build.ps1  fix_vcpkg_dependencies.ps1  gerar_minimap.lua  init.lua  limpar_cache_total.bat  minimap772.otmm  push-otclient.sh  setup_vcpkg.ps1  setup_vcpkg.sh  vcpkg.json
.github/workflows/: README.md  TRIGGER_BUILD  TRIGGER_DEBUG  TROUBLESHOOTING.md  build-windows-debug.yml  build-windows-direct.yml  build-windows-final.yml  build-windows-fixed.yml  build-windows-robust.yml  build-windows-simple.yml  build-windows-vs.yml  build-windows.yml  build.yml
cmake/: FindVcpkgDependencies.cmake
data/: minimap772.otmm
data/shaders/: map_effect_scale_fragment.frag  map_effect_scale_vertex.frag
modules/client_entergame/: castprotocol.lua  castslist.lua  castslist.otui  characterlist.lua  entergame.lua  entergame.otmod  entergame.otui
modules/game_containers/: containers.lua
modules/game_effects/: effects.lua  effects.otmod
modules/game_interface/: gameinterface.lua  gameinterface.otui
modules/game_market/: market.lua  market.otmod  market.otui  market_772.lua  marketprotocol.lua
modules/game_minimap/: fullmap.otui  minimap.lua  minimap.otui  minimap_horizontal.otui  minimap_section.otui
modules/game_shaders/: shaders.lua
modules/game_walking/: walking.lua
src/: CMakeLists.txt
src/client/: effect.cpp  thingtype.cpp
src/framework/core/: adaptativeframecounter.h
vc17/: otclient.vcxproj
(+5 files in other folders)
